@@ -20,7 +20,6 @@ mv /opt/apache-maven-$MAVEN_VERSION /opt/maven
 ln -s /opt/maven/bin/mvn /usr/local/bin/mvn
 echo "M2_HOME=/opt/maven" | tee -a /etc/environment
 echo "JAVA_HOME=/usr/lib/jvm/java-21-amazon-corretto.x86_64" | tee -a /etc/environment
-echo 'MAVEN_OPTS="-Xmx512m -XX:MaxPermSize=128' | tee -a /etc/environment
 rm -rf /tmp/apache-maven-$MAVEN_VERSION-bin.tar.gz
 
 # then install terraform
